--- a/index.html
+++ b/index.html
@@ -1,22 +1,48 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Solicitudes de Cambio</title>
-
+    <title>Sistema de Solicitudes de Cambio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            max-width: 600px;
+            margin: 0 auto;
+            padding: 20px;
+            text-align: center;
+            background-color: #f4f4f4;
+        }
+        h1 {
+            color: #333;
+            border-bottom: 2px solid #007bff;
+            padding-bottom: 10px;
+        }
+        .menu {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 30px;
+        }
+        .menu a {
+            text-decoration: none;
+            background-color: #007bff;
+            color: white;
+            padding: 10px 20px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+        .menu a:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
-
 <body>
-
-    <center>
-        <h> sistema de solicitudes de cambios</h>
-    </center>
-
-    <p><a href="formulario.html">realizar solicitud</a></p>
-    <p> <a href="solicitudes.php">aprobar solicitudes</a></p>
-
+    <h1>Sistema de Solicitudes de Cambio</h1>
+    
+    <div class="menu">
+        <a href="formulario.html">Realizar Solicitud</a>
+        <a href="solicitudes.php">Aprobar Solicitudes</a>
+    </div>
 </body>
-
 </html>
