Se actualizo la estructura y se agrego el comportamiento de la base de datos

--- a/front/index.html
+++ b/front/index.html
@@ -11,11 +11,11 @@
 <body>
 
     <center>
-        <h> sistema de solicitudes de cambios</h>
+        <h> Sistema de solicitudes de cambios</h>
     </center>
 
     <p><a href="formulario.html">realizar solicitud</a></p>
-    <p> <a href="solicitudes.php">aprobar solicitudes</a></p>
+    <p> <a href="solicitudes.html">aprobar solicitudes</a></p>
 
 </body>
 
