Se corrigieron archivos

--- a/front/solicitudes.html
+++ b/front/solicitudes.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <p id="mensaje"></p>
-        <h1>Solicitudes pendientes</h1>
+        <h1>Solicitudes</h1>
     </header>
 
     <main id="container" class="container">
