--- a/front/index.html
+++ b/front/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,17 +14,20 @@
             text-align: center;
             background-color: #f4f4f4;
         }
+
         h1 {
             color: #333;
             border-bottom: 2px solid #007bff;
             padding-bottom: 10px;
         }
+
         .menu {
             display: flex;
             justify-content: center;
             gap: 20px;
             margin-top: 30px;
         }
+
         .menu a {
             text-decoration: none;
             background-color: #007bff;
@@ -32,19 +36,21 @@
             border-radius: 5px;
             transition: background-color 0.3s ease;
         }
+
         .menu a:hover {
             background-color: #0056b3;
         }
     </style>
 </head>
+
 <body>
+    <h1>Sistema de solicitudes</h1>
 
-    <center>
-        <h> Sistema de solicitudes de cambios</h>
-    </center>
-
-    <p><a href="formulario.html">realizar solicitud</a></p>
-    <p> <a href="solicitudes.html">aprobar solicitudes</a></p>
+    <div class="menu">
+        <a href="formulario.html">realizar solicitud</a>
+        <a href="solicitudes.html">aprobar solicitudes</a>
+    </div>
 
 </body>
+
 </html>
